--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="file:///home/pi/Desktop/Test/style.css"/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
 
         <title>
             Gipfeli Vergleich 2020
